# napp-poc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md
.github/workflows/: deploy.yml
backend/: Cargo.toml
backend/data/: partijregister.json
backend/src/: beheer.rs  bezwaar.rs  claim.rs  db.rs  engine.rs  handelsregister.rs  handlers.rs  machtiging.rs  main.rs  register.rs  rekening.rs  state.rs
backend/tests/bdd/: main.rs  world.rs
backend/tests/bdd/steps/: given.rs  mod.rs  then.rs  when.rs
frontend/: aanvrager.html  beoordelaar.html  index.html  package-lock.json  package.json  vite.config.js
frontend/frontend/public/wasm/pkg/: regelrecht_engine.d.ts  regelrecht_engine.js  regelrecht_engine_bg.wasm  regelrecht_engine_bg.wasm.d.ts
frontend/src/: api.js  engine.js  format.js  session.js  theme.css
frontend/src/aanvrager/: main.js
frontend/src/beoordelaar/: App.vue  main.js
frontend/src/components/: ClaimAanduiding.vue  HrToetsRegels.vue  LifecycleTimeline.vue  NBanner.vue  PocBanner.vue  PortalHeader.vue
frontend/src/gherkin/: runner.js  steps.js
frontend/src/public/: App.vue  main.js
frontend/src/views/: HomeView.vue  RegisterView.vue
frontend/src/views/aanvrager/: AanvraagNieuwView.vue  AanvraagStatusView.vue  AanvragerView.vue  OrganisatieView.vue
frontend/src/views/beoordelaar/: BeoordelaarView.vue  BeoordelingView.vue  PartijDetailView.vue  PartijregisterView.vue  ScenarioRunnerView.vue
law/algemene_termijnenwet/: 1964-04-01.yaml
law/algemene_wet_bestuursrecht/: 1994-01-01.yaml
law/besluit_subsidiering_decentrale_politieke_partijen/: 2026-01-01.yaml
law/kieswet/: 1989-09-28.yaml
law/regeling_subsidiebedragen/: 2026-01-01.yaml
law/wet_op_de_politieke_partijen/: 2026-01-01.yaml
scenarios/: afwijzing.feature  bezwaar.feature  eenmaligheid.feature  kieswet_registratie.feature  procedure_awb.feature  rekening.feature  run_eval.py  termijnen.feature  toekenning_decentraal.feature  toekenning_landelijk.feature
scripts/: bouw_register.py  seed_cast.json  seed_demo.sh  seed_productie.py
