[package]
name = "napp-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
regelrecht-engine.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[dev-dependencies]
cucumber = "0.23"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[test]]
name = "bdd"
harness = false
